# palabos-lammps

./: .clang-format  .gitignore
cmake/: lammps.cmake  palabos.cmake
example/emoblism/: .clang-format  CMakeLists.txt  Makefile  README.md  embolism.cpp  helper.cmake
lammps-ext/: CMakeLists.txt  Makefile
lammps-ext/include/lammps_ext/: fix_fcm.h
lammps-ext/src/: fix_fcm.cpp
src/: ibm3D.h  ibm3D.hh  lammpsWrapper.h  lammpsWrapper.hh  latticeDecomposition.h  latticeDecomposition.hh
